kubernetes/ingress.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tort-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:

    # default-http-backend
    - http:
        paths:
          - backend:
              serviceName: tort-gateway
              servicePort: 80

    - host: tort.local
      http:
        paths:
          - path: /.*
            backend:
              serviceName: tort-front
              servicePort: 80
          - path: /gateway
            backend:
              serviceName: tort-gateway
              servicePort: 80

    - host: tort-dashboard.local
      http:
        paths:
          - path: /.*
            backend:
              serviceName: tort-dashboard
              servicePort: 80
